--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,9 @@
 title: "README"
 author: "Abdullah Aydogan"
 date: "February 1, 2020"
-output: html_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
